--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "it-tools",
-  "version": "2024.5.13-a0bc346",
+  "name": "LocalJson",
+  "version": "0.0.1",
   "description": "Collection of handy online tools for developers, with great UX. ",
   "keywords": [
     "productivity",
