--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,11 @@
     "developer-tools",
     "developer-productivity"
   ],
-  "author": "Corentin Th <corentin.thomasset74+it-tools@gmail.com> (https://github.com/CorentinTh)",
+  "author": "inRemark <inremark@outlook.com> & Corentin Th <corentin.thomasset74+it-tools@gmail.com> (https://github.com/inRemark)",
   "license": "GNU GPLv3",
   "repository": {
     "type": "git",
-    "url": "https://github.com/CorentinTh/it-tools"
+    "url": "https://github.com/inRemark/localjson"
   },
   "scripts": {
     "dev": "vite",
