--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -27,9 +27,11 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+        working-directory: ./frontend
 
       - name: Build app
         run: pnpm build
+        working-directory: ./frontend
 
       - name: Restore Playwright browsers from cache
         uses: actions/cache@v3
@@ -42,6 +44,8 @@ jobs:
 
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
+        working-directory: ./frontend
 
       - name: Run Playwright tests
         run: pnpm run test:e2e --shard=${{ matrix.shard }}
+        working-directory: ./frontend
