--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,10 @@ coverage
 # Webkit with playwright creates a salt file
 salt
 build/bin/
+build/darwin/Info.plist
 .DS_Store
 rsync.sh
+entitlements.plist
+mac-store
+mac-appstore-build.sh
+mac-appself-build.sh
